# tbccsi

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  cli.py  justfile  pyproject.toml  setup.py
docs/: index.md  installation.md  usage.md
models/: virchow2_hybrid.py  vit_model_5_6.py  vit_model_5_7.py
scripts/: make_heatmaps.py  run_cli.sh  run_pipeline.py  run_tbccsi.sh  slide_blur_map.py
src/tbccsi/: cli.py  tbccsi.py  tbccsi_inference.py  tbccsi_segmentation.py  tbccsi_tiler.py  vit_model_5_6.py
tbccsi/: __init__.py  cli.py  model_config.py  model_inference.py  model_virchow2.py  tbccsi_main.py  utils.py  wsi_plot.py  wsi_segmentation.py  wsi_tiler.py
tbccsi/models/: baseline_resnet.py  baseline_virchow2.py  baseline_virchow2_mlp.py  daft_macrophage_v1.py  daft_macrophage_v1.yaml  domain_film_regressor.py  domain_specific.py  mac_domain_specific.py  mac_domain_specific.yaml  mac_film.py  mac_film.yaml  mac_linear.py  mac_linear.yaml  mac_mlp.py  mac_mlp.yaml  mac_regressors.py  mac_resnet.py  mac_resnet.yaml  model_virchow2.py  model_virchow2_v2.py  model_virchow2_v2.yaml  model_virchow2_v3.py  model_virchow2_v3.yaml
tests/: __init__.py  test_cli.sh  test_tbccsi.py  test_tiler.py
