[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbccsi"
version = "0.2.4"
description = "TBCCSI project with multihead models"
readme = "README.md"
requires-python = ">=3.10"

# FIX 1: License is now a simple string (SPDX identifier) to fix the deprecation warning
license = "MIT"

authors = [
  { name = "IlyaLab", email = "your.email@example.com" },
]

# Add your project dependencies here
dependencies = [
    "torch",
    "numpy",
    "pandas",
    # Add other libs you use, e.g. "h5py", "timm", etc.
]

[project.urls]
Repository = "https://github.com/IlyaLab/tbccsi"

[tool.setuptools.packages.find]
where = ["."]
include = ["tbccsi*"]  # We only need to find the main package now
namespaces = false

[project.scripts]
tbccsi = "tbccsi.cli:app"