[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbccsi"
version = "0.2.4"
description = "TBCCSI project with multihead models"
readme = "README.md"
requires-python = ">=3.10"

license = {text = "MIT"}

authors = [
  { name = "IlyaLab", email = "your.email@example.com" },
]

dependencies = [
    "torch",
    "numpy",
    "pandas",
    "Pillow",
    "typer",
    "tqdm",
    "opencv-python-headless",
    "timm",
    "matplotlib",
    "scipy"
    # Add other libs you use, e.g. "h5py", "timm", etc.
]

[project.urls]
Repository = "https://github.com/IlyaLab/tbccsi"

[tool.setuptools.packages.find]
where = ["."]
include = ["tbccsi*"]  # We only need to find the main package now
namespaces = false

[project.scripts]
tbccsi = "tbccsi.cli:app"
